--- a/app/globals.css
+++ b/app/globals.css
@@ -5,6 +5,16 @@
 
 @custom-variant dark (&:is(.dark *));
 
+@theme {
+  --font-winky: "Winky", sans-serif;
+}
+
+/* .reveal {
+  opacity: 0;
+  transform: translateY(30px);
+  transition: all 1s;
+} */
+
 @theme inline {
   --color-background: var(--background);
   --color-foreground: var(--foreground);
